parser/tests/bad/const02.st
% re-assignment on constant reference

const i := 0
i := 1
